fix weird image flicker

--- a/front-end/src/components/presetCard/presetCard.module.scss
+++ b/front-end/src/components/presetCard/presetCard.module.scss
@@ -22,7 +22,7 @@
         height: 8rem;
         object-fit: cover;
         border-radius: 0.75rem;
-        transition: box-shadow 0.3s, filter 0.3s;
+        box-shadow: 0 0 0 transparent; 
     }
 
     &:hover .image {
